BackgroundToggle/src/components/Explanation/Explanation.css
.explanation {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 1rem;
}

.ol__explanation {
  list-style: none;

  width: 100%;
  max-width: 500px;

  display: flex;
  flex-direction: column;
  gap: .6rem;
}

.explanation__list-item {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  width: 100%;
  padding: 1rem;
  background-color: #f9f9f9;
  border-radius: 0.5rem;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
  margin-bottom: 1rem;
}

.explanation__list-item p {
  font-size: 1rem;
  color: #333;
  line-height: 1.5;
}

.explanation__list-item strong {
  color: #007bff;
  font-size: 1.1rem;
}

.explanation__list-image {
  width: 100%;
  max-width: 600px;
  height: auto;
  border-radius: 0.5rem;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
  border: 1px solid #ddd;
  margin-top: 0.5rem;
}

